--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,12 @@
   color: #61dafb;
 }
 
+.bolded{
+  font-size: 14px;
+  font-weight: 600;
+  font-style: italic;
+  color: #171717;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
